; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_da7218.c_da7218_of_dmic_clkrate.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_da7218.c_da7218_of_dmic_clkrate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_soc_component = type { i32 }

@DA7218_DMIC_CLK_1_5MHZ = common dso_local global i32 0, align 4
@DA7218_DMIC_CLK_3_0MHZ = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"Invalid DMIC clock rate\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_soc_component*, i32)* @da7218_of_dmic_clkrate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @da7218_of_dmic_clkrate(%struct.snd_soc_component* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.snd_soc_component*, align 8
  %5 = alloca i32, align 4
  store %struct.snd_soc_component* %0, %struct.snd_soc_component** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %11 [
    i32 1500000, label %7
    i32 3000000, label %9
  ]

7:                                                ; preds = %2
  %8 = load i32, i32* @DA7218_DMIC_CLK_1_5MHZ, align 4
  store i32 %8, i32* %3, align 4
  br label %17

9:                                                ; preds = %2
  %10 = load i32, i32* @DA7218_DMIC_CLK_3_0MHZ, align 4
  store i32 %10, i32* %3, align 4
  br label %17

11:                                               ; preds = %2
  %12 = load %struct.snd_soc_component*, %struct.snd_soc_component** %4, align 8
  %13 = getelementptr inbounds %struct.snd_soc_component, %struct.snd_soc_component* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @dev_warn(i32 %14, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %16 = load i32, i32* @DA7218_DMIC_CLK_3_0MHZ, align 4
  store i32 %16, i32* %3, align 4
  br label %17

17:                                               ; preds = %11, %9, %7
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i32 @dev_warn(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
